--- a/views/document/addaccdoc.ejs
+++ b/views/document/addaccdoc.ejs
@@ -36,11 +36,13 @@
                 </div>
         </div>
         <div class="layui-inline">
+          <div class="layui-input-inline">
           <select name="contrller" class="layui-select" id="type">
             <option>现金凭证</option>
             <option>银行凭证</option>
             <option>转账凭证</option>
           </select>
+        </div>
         </div>
         <!--
         <div class="layui-inline">
