--- a/views/accounts/login1.ejs
+++ b/views/accounts/login1.ejs
@@ -1,4 +1,6 @@
 <% layout('layout') -%>
+<script src="/js/jquery.min.js"></script>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
 
 <div class="row">
 	<div class="col-lg-6 col-md-offset-3">
@@ -26,7 +28,7 @@
 			  <input type="password" class="form-control" name="password">
 			</div>
 
-			<button type="submit" class="btn btn-success">保存</button>
+			<button type="submit" class="btn btn-success">提交</button>
 
 		</form>
 	</div>
