--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -16,34 +16,36 @@
                             </li >            
             </ul>
             </li>
+            
             <li>
                 <a href="javascript:;">   
                     <i class="iconfont">&#xe723;</i>
-                    <cite>摘要管理</cite>
+                    <cite>系统初始化</cite>
                     <i class="iconfont nav_right">&#xe697;</i>
                 </a>
+                <ul class="sub-menu" >
+                        <li>
+                            <a href="/initial"> 
+                                <i class="iconfont">&#xe6a7;</i>
+                                <cite>初始化设置</cite>
+                            </a>
+                        </li >            
+                </ul>
+                <ul class="sub-menu" >
+                        <li>
+                            <a href="/iniaccount"> 
+                                <i class="iconfont">&#xe6a7;</i>
+                                <cite>会计科目初始化</cite>
+                            </a>
+                        </li >            
+                </ul>
                 <ul class="sub-menu" >
                     <li>
                         <a href="/tableReload"> 
                             <i class="iconfont">&#xe6a7;</i>
-                            <cite>摘要列表</cite>
+                            <cite>摘要管理</cite>
                         </a>
                     </li >            
-                </ul>
-            </li>
-            <li>
-                <a href="javascript:;">
-                    <i class="iconfont">&#xe723;</i>
-                    <cite>会计科目管理</cite>
-                    <i class="iconfont nav_right">&#xe697;</i>
-                </a>
-                <ul class="sub-menu">
-                    <li>
-                        <a href="/account">
-                            <i class="iconfont">&#xe6a7;</i>
-                            <cite>会计科目表</cite>
-                        </a>
-                    </li >
                 </ul>
             </li>
             <li>
@@ -60,7 +62,30 @@
                             </a>
                         </li >
                     </ul>
-                </li>
+            </li>
+            <li>
+                    <a href="javascript:;">   
+                        <i class="iconfont">&#xe723;</i>
+                        <cite>账簿管理</cite>
+                        <i class="iconfont nav_right">&#xe697;</i>
+                    </a>
+                    <ul class="sub-menu" >
+                        <li>
+                            <a href="/glacc"> 
+                                <i class="iconfont">&#xe6a7;</i>
+                                <cite>总分类账</cite>
+                            </a>
+                        </li >            
+                    </ul>
+                    <ul class="sub-menu" >
+                            <li>
+                                <a href="/docitem"> 
+                                    <i class="iconfont">&#xe6a7;</i>
+                                    <cite>明细账</cite>
+                                </a>
+                            </li >            
+                    </ul>
+            </li>
                 <li>
                         <a href="javascript:;">
                             <i class="iconfont">&#xe723;</i>
@@ -69,13 +94,21 @@
                         </a>
                         <ul class="sub-menu">
                             <li>
-                                <a href="">
+                                <a href="/balancesheet">
                                     <i class="iconfont">&#xe6a7;</i>
                                     <cite>资产负债表</cite>
                                 </a>
                             </li >
                         </ul>
-                    </li>
+                        <ul class="sub-menu">
+                                <li>
+                                    <a href="/plsheet">
+                                        <i class="iconfont">&#xe6a7;</i>
+                                        <cite>损益表</cite>
+                                    </a>
+                                </li >
+                        </ul>
+                </li>
             <li>
                 <a href="javascript:;">
                     <i class="iconfont">&#xe726;</i>
@@ -89,24 +122,6 @@
                             <cite>用户列表</cite>
                         </a>
                     </li >
-                    <li>
-                        <a _href="admin-role.html">
-                            <i class="iconfont">&#xe6a7;</i>
-                            <cite>角色管理</cite>
-                        </a>
-                    </li >
-                    <li>
-                        <a _href="admin-cate.html">
-                            <i class="iconfont">&#xe6a7;</i>
-                            <cite>权限分类</cite>
-                        </a>
-                    </li >
-                    <li>
-                        <a _href="admin-rule.html">
-                            <i class="iconfont">&#xe6a7;</i>
-                            <cite>权限管理</cite>
-                        </a>
-                    </li >
                 </ul>
             </li>
             <li>
@@ -117,7 +132,7 @@
                     </a>
                     <ul class="sub-menu">
                         <li>
-                            <a href="/manageuser">
+                            <a href="/customer">
                                 <i class="iconfont">&#xe6a7;</i>
                                 <cite>客户列表</cite>
                             </a>
@@ -137,48 +152,6 @@
                             <cite>拆线图</cite>
                         </a>
                     </li >
-                    <li>
-                        <a _href="echarts2.html">
-                            <i class="iconfont">&#xe6a7;</i>
-                            <cite>柱状图</cite>
-                        </a>
-                    </li>
-                    <li>
-                        <a _href="echarts3.html">
-                            <i class="iconfont">&#xe6a7;</i>
-                            <cite>地图</cite>
-                        </a>
-                    </li>
-                    <li>
-                        <a _href="echarts4.html">
-                            <i class="iconfont">&#xe6a7;</i>
-                            <cite>饼图</cite>
-                        </a>
-                    </li>
-                    <li>
-                        <a _href="echarts5.html">
-                            <i class="iconfont">&#xe6a7;</i>
-                            <cite>雷达图</cite>
-                        </a>
-                    </li>
-                    <li>
-                        <a _href="echarts6.html">
-                            <i class="iconfont">&#xe6a7;</i>
-                            <cite>k线图</cite>
-                        </a>
-                    </li>
-                    <li>
-                        <a _href="echarts7.html">
-                            <i class="iconfont">&#xe6a7;</i>
-                            <cite>热力图</cite>
-                        </a>
-                    </li>
-                    <li>
-                        <a _href="echarts8.html">
-                            <i class="iconfont">&#xe6a7;</i>
-                            <cite>仪表图</cite>
-                        </a>
-                    </li>
                 </ul>
             </li>
         </ul>
