--- a/views/main/home.ejs
+++ b/views/main/home.ejs
@@ -5,7 +5,7 @@
       <div class="container">
         <h1>财务管理系统</h1>
         <p>中小型企业的财务管理ERP首选</p>
-        <p><a class="btn btn-primary btn-lg" href="#" role="button">Login &raquo;</a></p>
+        <p><a class="btn btn-primary btn-lg" href="/login" role="button">现在开始 &raquo;</a></p>
       </div>
     </div>
 
