--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -12,7 +12,7 @@
 
       <% if (!user) { %>
 
-      <li><a class="dropdown-toggle" data-toggle="dropdown" href="#">登录</a>
+      <li><a class="dropdown-toggle" data-toggle="dropdown" href="/login">登录</a>
         <ul class="dropdown-menu">
           <li><a href="/signup">注册</a></li>
           <li><a href="/login">登录</a></li>
