--- a/views/partials/nav.ejs
+++ b/views/partials/nav.ejs
@@ -62,6 +62,14 @@
                             </a>
                         </li >
                     </ul>
+                    <ul class="sub-menu" >
+                            <li>
+                                <a href="/recordacc"> 
+                                    <i class="iconfont">&#xe6a7;</i>
+                                    <cite>按月入账</cite>
+                                </a>
+                            </li >            
+                    </ul>
             </li>
             <li>
                     <a href="javascript:;">   
@@ -82,6 +90,14 @@
                                 <a href="/docitem"> 
                                     <i class="iconfont">&#xe6a7;</i>
                                     <cite>明细账</cite>
+                                </a>
+                            </li >            
+                    </ul>
+                    <ul class="sub-menu" >
+                            <li>
+                                <a href="/settleacc"> 
+                                    <i class="iconfont">&#xe6a7;</i>
+                                    <cite>月末结账</cite>
                                 </a>
                             </li >            
                     </ul>
