--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -21,7 +21,7 @@
 
       <% } else { %>
 
-      <li><a class="dropdown-toggle" data-toggle="dropdown" href="#"><%= user.profile.name %></a>
+      <li><a class="dropdown-toggle" data-toggle="dropdown" href="#"><%= user.name %></a>
         <ul class="dropdown-menu">
           <li><a href="/profile">Profile</a></li>
           <li><a href="/logout">Logout</a></li>
