--- a/views/sheet/balance.ejs
+++ b/views/sheet/balance.ejs
@@ -25,7 +25,7 @@
         <div class="x-body">
             <div class="demoTable">
                 <fieldset class="layui-elem-field layui-field-title" style="margin-top: 20px;">
-                    <legend>资产负债表 (2018年5月30日,人民币)</legend>
+                    <legend>资产负债表 (2018年6月,人民币)</legend>
                 </fieldset>
               <!--<blockquote class="layui-elem-quote layui-quote-nm">
                   2018年5月30日
